syntax = "proto3";

package employeePackage;

service Employee {
  rpc CreateEmployee(CreateEmployeeRequest) returns (CreateEmployeeResponse) {};
  rpc FetchEmployees(FetchEmployeesRequest) returns (FetchEmployeesResponse) {};
  rpc UpdateEmployee(UpdateEmployeeRequest) returns (UpdateEmployeeResponse) {};
  rpc DeleteEmployee(DeleteEmployeeRequest) returns (DeleteEmployeeResponse) {};
}

message EmployeeProto {
  string id = 1;
  string name = 2;
  string email = 3;
  string createdAt = 4;
  string updatedAt = 5;
}

message CreateEmployeeRequest {
  string name = 1;
  string email = 2;
}

message CreateEmployeeResponse {
  int32 status = 1;
  EmployeeProto data = 2;
  string message = 3;
}

message FetchEmployeesRequest {
  int32 limit = 1;
}

message FetchEmployeesResponse {
  int32 status = 1;
  repeated EmployeeProto employees = 2;
  string message = 3;
}

message UpdateEmployeeRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UpdateEmployeeResponse {
  int32 status = 1;
  EmployeeProto data = 2;
  string message = 3;
}

message DeleteEmployeeRequest {
  string id = 1;
}

message DeleteEmployeeResponse {
  int32 status = 1;
  string message = 2;
}
