// Original file: src/proto/employee.proto


export interface EmployeeProto {
  'id'?: (string);
  'name'?: (string);
  'email'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}

export interface EmployeeProto__Output {
  'id'?: (string);
  'name'?: (string);
  'email'?: (string);
  'createdAt'?: (string);
  'updatedAt'?: (string);
}
